[package]
name = "micro-pixdown"
version = "0.1.1"
license = "ISC"
edition = "2021"
repository = "https://github.com/Nakanoin19/micro-pixdown"
keywords = ["image", "markup-language", "microcontroller"]
description = "Markup language for Pixelart and animation on microcontroller leds"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
evalbit = "0.1.2"
fronma = { version = "0.2.0", features = ["toml"] }
itertools = "0.14.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wasm-bindgen = "0.2.114"
